[package]
name = "hackernews-prism"
version = "0.1.0"
authors = ["kaleidawave <kaleidawave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
env_logger = "0.8.1"
isahc = { version = "0.9.10", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"