[package]
name = "hackernews-prism"
version = "0.1.0"
authors = ["kaleidawave <kaleidawave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
futures = "0.3.7"
async-recursion = "0.2"
env_logger = "0.8.1"
lru = "0.6.1"
html-escape = "0.2.6"
lazy_static = "1.4.0"
isahc = { version = "0.9.10", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = { version = "0.4.19", features = ["serde"] } 